# liiaa

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/chains/: extractor.py
app/routers/: runs.py  tasks.py
app/schemas/: __init__.py  product.py  run.py  task.py
liiaa/: cnki.py  patent.py  wordcloud.py
prompts/: extractor.txt
schemas/: __init__.py  product_attributes.py
tests/: test_extract_attributes.py
