[project]
name = "liiaa"
version = "0.1.0"
description = "Lighting Industry Integration Analysis Assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10.3",
    "langchain-core>=0.3.22",
    "langchain-ollama>=0.2.1",
    "langchain-community>=0.3.10",
    "dashscope>=1.20.14",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
]
