[project]
name = "liiaa"
version = "0.1.0"
description = "Lighting Industry Integration Analysis Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.3",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "langchain-core>=0.3.25",
    "langchain-openai>=0.2.12",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "I", # isort
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # pyflakes
    "N", # pep8-naming
    "B", # flake8-bugbear
]
